added first app.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,8 @@
         "!./node_modules/**/*"
     ],
     "files": [
-        "./test.ts"
+        "./angular.d.ts",
+        "./app.ts"
     ],
-    "compileOnSave"
+    "compileOnSave": true
 }
